--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>vin.suki</groupId>
+    <groupId>site.xiaofei</groupId>
     <artifactId>api-sdk</artifactId>
     <version>1.0.3</version>
     <name>api-sdk</name>
@@ -24,24 +24,24 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <id>haiqing</id>
-            <name>haiqing</name>
-            <email>xxxxx@qq.com</email>
-            <roles>
-                <role>Project Manager</role>
-                <role>Architect</role>
-            </roles>
-        </developer>
-    </developers>
+<!--    <developers>-->
+<!--        <developer>-->
+<!--            <id>haiqing</id>-->
+<!--            <name>haiqing</name>-->
+<!--            <email>xxxxx@qq.com</email>-->
+<!--            <roles>-->
+<!--                <role>Project Manager</role>-->
+<!--                <role>Architect</role>-->
+<!--            </roles>-->
+<!--        </developer>-->
+<!--    </developers>-->
 
-    <scm>
-        <connection>https://github.com/xxxxx/api-sdk.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:xxxxx/api-sdk.git
-        </developerConnection>
-        <url>https://github.com/xxxxx/api-sdk</url>
-    </scm>
+<!--    <scm>-->
+<!--        <connection>https://github.com/xxxxx/api-sdk.git</connection>-->
+<!--        <developerConnection>scm:git:ssh://git@github.com:xxxxx/api-sdk.git-->
+<!--        </developerConnection>-->
+<!--        <url>https://github.com/xxxxx/api-sdk</url>-->
+<!--    </scm>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -127,6 +127,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.5</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
